spade-tests/src/snapshots/spade_tests__ast_lowering__declaration_after_let_requires_new_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity X() -> int<8> {
    let x: int<8> = 0;
    decl x;
    x
}


error: Variable declared more than once
  ┌─ testinput:3:10
  │
3 │     decl x;
  │          ^ This variable has been declared more than once
  │
note: Previously declared here
  ┌─ testinput:2:9
  │
2 │     let x: int<8> = 0;
  │         ^
  │


